fix: cluster-summary 박스에 overflow hidden 적용

--- a/packages/view/src/components/VerticalClusterList/Summary/Summary.scss
+++ b/packages/view/src/components/VerticalClusterList/Summary/Summary.scss
@@ -28,6 +28,7 @@
       @extend .cluster-summary__info;
       border-radius: 1.5625rem;
       background-color: $color-dark-gray;
+      overflow: hidden;
     }
   }
 }
